Beef up the Hapi interface

--- a/client/index.styl
+++ b/client/index.styl
@@ -1,2 +1,12 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat)
+
 body
-    background-color RGBA(107, 170, 64, 1.00)
+    background-color RGB(107, 170, 64)
+    font-family 'Montserrat', sans-serif
+
+    .wrap
+        background-color RGBA(240, 255, 240, .3)
+        display flex
+        margin 1em
+        padding 1em
+        flex-direction column
